strategyパターンテスト
クイズ形式のテスト版追加

--- a/strategy/strategy.html
+++ b/strategy/strategy.html
@@ -25,7 +25,8 @@ Shipping.prototype = {
 var UPS = function() {
     this.calculate = function(package) {
         // calculations...
-        return "$45.95";
+        
+        return package.from;
     }
 };
  
